--- a/Sass/Content/SagePost.scss
+++ b/Sass/Content/SagePost.scss
@@ -21,6 +21,9 @@
   color: $text-color; //inherit;
 }
 
+.menu-fa{
+    font-size: inherit !important;
+}
 
 .input-group-full-width{
     width: 100%;
